# the_linux_programming_interface

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c.yml
chapter_03/: README.md  exercise_03_01.c
chapter_04/: README.md  exercise_04_01.c  exercise_04_02.c
chapter_05/: README.md  exercise_05_01.c  exercise_05_02.c  exercise_05_03.c  exercise_05_04.c  exercise_05_05.c  exercise_05_07.c
chapter_06/: README.md  exercise_06_02.c  exercise_06_03.c
chapter_07/: README.md  exercise_07_01.c
chapter_08/: README.md  exercise_08_01.c  exercise_08_02.c
chapter_09/: README.md  exercise_09_03.c
chapter_10/: README.md
chapter_11/: README.md
chapter_12/: README.md  exercise_12_01.c  exercise_12_02.c  exercise_12_03.c
chapter_13/: README.md  exercise_13_05.c
chapter_14/: README.md  exercise_14_01.c
chapter_15/: README.md  exercise_15_03.c  exercise_15_04.c  exercise_15_06.c  exercise_15_07.c
chapter_16/: README.md  exercise_16_01.c
chapter_17/: README.md  exercise_17_01.c
chapter_18/: README.md  exercise_18_03.c  exercise_18_04.c  exercise_18_05.c  exercise_18_07.c  exercise_18_09.c
chapter_19/: README.md  exercise_19_01.c
chapter_20/: README.md  exercise_20_01.c  exercise_20_02.c  exercise_20_03a.c  exercise_20_03b.c  exercise_20_04.c
chapter_21/: README.md  exercise_21_01.c
chapter_22/: README.md  exercise_22_01.c  exercise_22_02.c  exercise_22_03.c
chapter_23/: README.md  exercise_23_01.c  exercise_23_03.c  exercise_23_04.c
chapter_24/: README.md  exercise_24_02.c  exercise_24_05.c
chapter_25/: README.md  exercise_25_01.c
chapter_26/: README.md  exercise_26_01.c  exercise_26_02.c  exercise_26_03.c  exercise_26_04.c
chapter_27/: README.md  exercise_27_02.c  exercise_27_06.c
chapter_28/: README.md  exercise_28_01a.c  exercise_28_01b.c
chapter_29/: README.md  exercise_29_01.c
chapter_30/: README.md  exercise_30_01.c  exercise_30_02.c  exercise_30_02.h  exercise_30_02_tests.c
chapter_31/: README.md  exercise_31_01.c  exercise_31_02a.c  exercise_31_02b.c
chapter_33/: README.md  exercise_33_01.c
chapter_34/: README.md  exercise_34_02.c  exercise_34_03.c  exercise_34_04.c  exercise_34_06.c  exercise_34_07.c
chapter_35/: README.md  exercise_35_01.c  exercise_35_02.c  exercise_35_03.c
chapter_36/: README.md  exercise_36_01.c  exercise_36_02.c  exercise_36_03.c
chapter_37/: README.md  exercise_37_01.c
chapter_38/: README.md  exercise_38_02.c
chapter_39/: README.md  exercise_39_01.c
chapter_41/: README.md  exercise_41_01.c
chapter_42/: README.md  bar.c  bar.h  exercise_42_01.c  exercise_42_02.c  foo.c  foo.h
chapter_44/: README.md  exercise_44_01.c  exercise_44_02.c  exercise_44_03.c  exercise_44_03.h  exercise_44_04.c  exercise_44_04.h  exercise_44_06.c  exercise_44_06.h  exercise_44_06_malicious.c
chapter_49/: README.md  exercise_49_01.c  exercise_49_03a.c  exercise_49_03b.c  exercise_49_04.c
chapter_50/: README.md  exercise_50_01.c  exercise_50_02.c
chapter_52/: README.md  exercise_52_01.c  exercise_52_02.h  exercise_52_02_client.c  exercise_52_02_server.c  exercise_52_04.c  exercise_52_05.c  exercise_52_06.c  exercise_52_07.c
chapter_57/: README.md  exercise_57_01.h  exercise_57_01_client.c  exercise_57_01_server.c  exercise_57_02.h  exercise_57_02_client.c  exercise_57_02_server.c  exercise_57_03.h  exercise_57_03_client.c  exercise_57_03_server.c  exercise_57_04.c
scripts/: install_dependencies.sh
